[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/sprites/health_bar.png" type="Texture" id=1]
[ext_resource path="res://src/scenes/HealthBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/scripts/Systems.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 8 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 8, 32, 8 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 16, 32, 8 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 24, 32, 8 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 32, 8 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Systems" type="Node2D"]
position = Vector2( 18, 8 )
script = ExtResource( 3 )

[node name="Engine" parent="." instance=ExtResource( 2 )]
frames = SubResource( 6 )
frame = 4
centered = false

[node name="Electrical" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 8 )
frames = SubResource( 6 )
frame = 4
centered = false

[node name="Exhaust" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 16 )
frames = SubResource( 6 )
frame = 4
centered = false

[node name="Peripheral" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 24 )
frames = SubResource( 6 )
frame = 4
centered = false
[connection signal="health_updated" from="Engine" to="." method="_on_Engine_health_updated"]
[connection signal="health_updated" from="Electrical" to="." method="_on_Electrical_health_updated"]
[connection signal="health_updated" from="Exhaust" to="." method="_on_Exhaust_health_updated"]
[connection signal="health_updated" from="Peripheral" to="." method="_on_Peripheral_health_updated"]
